# Meta-Harness-YGN

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  lire.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: context-harvester.md  harness-evaluator.md  harness-proposer.md  regression-auditor.md
docs/superpowers/plans/: 2026-04-07-phase-0-walking-skeleton.md  2026-04-07-phase-1-mcp-core.md  2026-04-07-phase-2-context-engine.md  2026-04-07-phase-3-eval-framework.md  2026-04-07-phase-4-autonomous-loop.md
docs/superpowers/specs/: 2026-04-07-meta-harness-v2-design.md
docs/wiki/: architecture.md  commands-reference.md  concepts.md  eval-tasks-guide.md  faq.md  getting-started.md
eval-tasks/: _schema.json
eval-tasks/capability/: propose-improvement.json
eval-tasks/functional/: test-suite-passes.json
eval-tasks/regression/: context-harvester-runs.json  harness-valid.json  mcp-server-starts.json  plugin-structure.json  tests-pass.json
hooks/: capture-subagent.mjs  hooks.json  log-instructions.mjs  session-start.mjs
output-styles/: meta-harness.md
scripts/: config.py  context_harvester.py  eval_runner.py  meta_harness.py
servers/: mh_server.py
skills/harness-bootstrap/: SKILL.md
skills/harness-dashboard/: SKILL.md
skills/harness-eval/: SKILL.md
skills/harness-evolve/: SKILL.md
skills/harness-frontier/: SKILL.md
skills/harness-regressions/: SKILL.md
tests/: test_context_harvester.py  test_eval_runner.py  test_mcp_server.py  test_meta_harness.py  test_repo_structure.py
